Nexa-Studio-Full-Old-Codebase/Nexa-Studio/attached_assets/Pasted--2025-06-19-03-04-06-0000-8208-INFO-Starting-gunicorn-23-0-0-2025-06-19-03-04-06-0000-820-1750302274194_1750302274196.txt
[2025-06-19 03:04:06 +0000] [8208] [INFO] Starting gunicorn 23.0.0
[2025-06-19 03:04:06 +0000] [8208] [INFO] Listening at: http://0.0.0.0:5000 (8208)
[2025-06-19 03:04:06 +0000] [8208] [INFO] Using worker: sync
[2025-06-19 03:04:06 +0000] [8219] [INFO] Booting worker with pid: 8219
[2025-06-19 03:04:06 +0000] [8219] [ERROR] expected 'except' or 'finally' block (app.py, line 187)
Traceback (most recent call last):
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/gunicorn/workers/base.py", line 147, in load_wsgi
    self.wsgi = self.app.wsgi()
                ^^^^^^^^^^^^^^^
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/gunicorn/app/base.py", line 66, in wsgi
    self.callable = self.load()
                    ^^^^^^^^^^^
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/gunicorn/app/wsgiapp.py", line 57, in load
    return self.load_wsgiapp()
           ^^^^^^^^^^^^^^^^^^^
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/gunicorn/app/wsgiapp.py", line 47, in load_wsgiapp
    return util.import_app(self.app_uri)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/gunicorn/util.py", line 370, in import_app
    mod = importlib.import_module(module)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/nix/store/clx0mcir7qw8zk36zbr4jra789g3knf6-python3-3.11.10/lib/python3.11/importlib/__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1204, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1176, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1147, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 690, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 940, in exec_module
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/home/runner/workspace/main.py", line 1, in <module>
    from app import app  # noqa: F401
    ^^^^^^^^^^^^^^^^^^^
  File "/home/runner/workspace/app.py", line 187
    try:
SyntaxError: expected 'except' or 'finally' block
[2025-06-19 03:04:07 +0000] [8208] [INFO] Handling signal: winch
[2025-06-19 03:04:07 +0000] [8208] [INFO] Handling signal: winch
[2025-06-19 03:04:07 +0000] [8208] [INFO] Handling signal: winch
[2025-06-19 03:04:07 +0000] [8208] [INFO] Handling signal: winch
